--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -56,8 +56,8 @@ jobs:
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
 
     env:
-      Solution_Name: YouTubeMp3Downloader
-      Test_Project_Path:  YouTubeMp3Downloader-tests/ YouTubeMp3Downloader-tests.csproj
+      Solution_Name: YouTubeMp3Downloader.sln
+      Test_Project_Path: YT2MP3Sharp/YouTubeMp3Downloader.csproj
 
     steps:
     - name: Checkout
